# ForgeStack

./: .gitignore  README.md  manual_run.py  pyproject.toml  requirements.txt  run_cli.py  stack.yaml
core/: pyproject.toml
core/devscaffold/: cli.py
core/devscaffold/core/: compose.py  config.py  context (2).py  context.py  executor.py  files.py  graph.py  plan.py  plugin_api.py  registry.py  shell (2).py
core/devscaffold/templates/: ai-startup (2).yaml  ai-startup.yaml  fullstack (2).yaml  fullstack.yaml
docs/: README_docs_overview.md  architecture.md  cli.md  contributing.md  core-engine.md  current-architecture.md  data-science-strategy.md  devdata-devview-boundaries.md  executor.md  forgestack_architecture_spec.md  graph-engine.md  hardware-strategy.md  internal-module-status.md  introduction.md  lean-core-principles.md  machine-readable-output.md  object-model.md  planner.md  platform-tools.md  plugin-system.md  presets-and-projects.md  product-strategy.md  roadmap.md  stack-format.md  tools.md  validation-and-state.md
examples/: api_stack.yaml  ml_stack.yaml  project.yaml  web_stack.yaml
forgestack/cli/: main.py  run_cli.py
forgestack/config/: schema.py  validators.py
forgestack/core/: __init__.py  compose.py  composer.py  context.py  dag_executor.py  devmake.py  executor.py  files.py  graph.py  models.py  output.py  plan.py  plan_executor.py  plan_merge.py  planner.py  plugin_api.py  preset_resolver.py  registry.py  resolver.py  shell.py  stack_loader.py  state.py  template_loader.py  tool_boundaries.py  validation.py
forgestack/plugins/: arduino.py  celery.py  fastapi.py  jupyter.py  kedro.py  postgres.py  python.py  react.py  redis.py  sqlite.py  voila.py
forgestack/templates/: README_render_context.md  ai-startup.yaml  celery_app.py  celery_docker.yml  celery_tasks.py  frontend_features_ts  postgres_docker.yml  python_requirements.txt  react_package.json  redis_docker.yml
plugins/auth/: pyproject.toml
plugins/auth/devscaffold_auth/: plugin.py
plugins/celery/: pyproject.toml
plugins/celery/devscaffold_celery/: plugin (2).py  plugin.py
plugins/fastapi/: pyproject.toml
plugins/fastapi/devscaffold_fastapi/: plugin.py
plugins/ml_workspace/: plugin.py  pyproject.toml
plugins/ml_workspace/devscaffold_ml_workspace/: plugin.py
plugins/postgres/: pyproject.toml
plugins/react/: pyproject.toml
plugins/redis/: pyproject.toml
projects/: DataWorkbenchApp.yaml  DeviceOpsConsoleApp.yaml  LocalWorkflowApp.yaml  MyApp.yaml  NotebookViewApp.yaml  PipelineWorkbenchApp.yaml  TechnicianConsoleApp.yaml
tests/: test_apply_smoke.py  test_cli_create_project.py  test_cli_help.py  test_cli_presets_list.py  test_feature_rendering.py  test_full_build_plan_outputs.py  test_generated_app_template.py  test_generated_async_vertical_slice.py  test_generated_device_bridge_vertical_slice.py  test_generated_jupyter_vertical_slice.py  test_generated_root_artifacts.py  test_generated_sqlite_vertical_slice.py  test_generated_structured_workflow_vertical_slice.py  test_generated_technician_console_vertical_slice.py  test_generated_voila_vertical_slice.py  test_plan_uses_canonical_template_ids.py  test_preset_project_layout.py  test_preset_resolver.py  test_public_tool_boundaries.py  test_react_plugin.py  test_react_wrapper_template.py  test_render_context_features.py  test_template_loader_aliases.py  test_tool_boundaries.py  test_validators.py
(+65 files in other folders)
