[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgestack"
version = "0.1.0"
description = "ForgeStack modular application generator"
requires-python = ">=3.10"

dependencies = [
    "click",
    "pyyaml",
    "jinja2",
    "networkx",
    "rich"
]

[project.scripts]
devmake = "forgestack.cli.main:run_cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["forgestack*"]