
[project]
name = "devscaffold"
version = "0.1.0"
description = "Agnostic project orchestrator + plugin platform"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "PyYAML>=6.0.1"
]

[project.scripts]
devscaffold = "devscaffold.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
