[project]
name = "devscaffold"
version = "0.1.0"
description = "ForgeStack CLI for composable development stacks"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "PyYAML>=6.0.1",
  "packaging>=24.0"
]

[project.scripts]
forgestack = "devscaffold.cli:app"
devscaffold = "devscaffold.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
