[project]
name = "devscaffold-auth"
version = "0.1.0"
dependencies = ["devscaffold"]

[project.entry-points."devscaffold.plugins"]
auth = "devscaffold_auth.plugin:plugin"

[project.entry-points."forgestack.plugins"]
auth = "devscaffold_auth.plugin:plugin"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
