[project]
name = "devscaffold-celery"
version = "0.1.0"
dependencies = ["devscaffold"]

[project.entry-points."devscaffold.plugins"]
celery = "devscaffold_celery.plugin:plugin"

[project.entry-points."forgestack.plugins"]
celery = "devscaffold_celery.plugin:plugin"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
