[project]
name = "devscaffold-ml-workspace"
version = "0.1.0"
dependencies = ["devscaffold"]

[project.entry-points."devscaffold.plugins"]
ml-workspace = "devscaffold_ml_workspace.plugin:plugin"

[project.entry-points."forgestack.plugins"]
ml-workspace = "devscaffold_ml_workspace.plugin:plugin"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
